--- a/assets/globals.styl
+++ b/assets/globals.styl
@@ -4,3 +4,15 @@
 *
     margin 0
     padding 0
+
+body
+    background-color $fondoClaro
+
+main 
+    font-family 'Open Sans'
+
+.page-enter-active, .page-leave-active 
+    transition: opacity .5s;
+
+.page-enter, .page-leave-to 
+    opacity: 0;
