--- a/assets/globals.styl
+++ b/assets/globals.styl
@@ -1,12 +1,20 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
 
+:root
+    --fondo-primario #f5f6fa
+    --fondo-secundario #fff
+    --font-primary-color black
+    --font-secondary-color #8395a7
+    --border-radius 7px
+
 *
     margin 0
     padding 0
 
 body
-    background-color $fondoClaro
+    background-color var(--fondo-primario)
+    color var(--font-primary-color)
 
 main 
     font-family 'Open Sans'
