cambios de estilo para tema claro

--- a/assets/globals.styl
+++ b/assets/globals.styl
@@ -19,24 +19,23 @@ body
 main 
     font-family 'Open Sans'
 
-
-::-webkit-scrollbar 
-    width: 10px
-
-
-::-webkit-scrollbar-track 
-    background: rgba(#f1f1f1,0.1) 
-
-
-::-webkit-scrollbar-thumb 
-    background: rgba(#888, 0.5) 
-
-
-::-webkit-scrollbar-thumb:hover 
-    background: rgba(#888,0.8) 
-
+//
 .page-enter-active, .page-leave-active 
     transition: opacity .5s
 
 .page-enter, .page-leave-to 
     opacity: 0;
+
+
+//  SCROLLBAR
+::-webkit-scrollbar 
+    width: 10px
+
+::-webkit-scrollbar-track 
+    background: rgba(#f1f1f1,0.1) 
+
+::-webkit-scrollbar-thumb 
+    background: rgba(#888, 0.5) 
+
+::-webkit-scrollbar-thumb:hover 
+    background: rgba(#888,0.8) 
