integracion de fechas y estilos para el markdown

--- a/assets/globals.styl
+++ b/assets/globals.styl
@@ -19,7 +19,7 @@ body
 main 
     font-family 'Open Sans'
 
-//
+
 .page-enter-active, .page-leave-active 
     transition: opacity .5s
 
@@ -39,3 +39,6 @@ main
 
 ::-webkit-scrollbar-thumb:hover 
     background: rgba(#888,0.8) 
+
+::selection
+    background var(--fondo-primario)
