--- a/assets/globals.styl
+++ b/assets/globals.styl
@@ -32,13 +32,13 @@ main
     width: 10px
 
 ::-webkit-scrollbar-track 
-    background: rgba(#f1f1f1,0.1) 
+    background: rgba(#f1f1f1,0.4) 
 
 ::-webkit-scrollbar-thumb 
-    background: rgba(#888, 0.5) 
+    background: rgba(#35495e, 0.5) 
 
 ::-webkit-scrollbar-thumb:hover 
-    background: rgba(#888,0.8) 
+    background: rgba(#35495e,0.8) 
 
 ::selection
     background var(--fondo-primario)
