sharebuttons y fotter ok

--- a/assets/globals.styl
+++ b/assets/globals.styl
@@ -26,6 +26,12 @@ main
 .page-enter, .page-leave-to 
     opacity: 0;
 
+.isVisible
+    opacity: 1;
+    transition: 1.5s
+
+.isInvisible
+    opacity: 0;
 
 //  SCROLLBAR
 ::-webkit-scrollbar 
