--- a/assets/globals.styl
+++ b/assets/globals.styl
@@ -4,6 +4,7 @@
 :root
     --fondo-primario #dfe6e9    
     --fondo-secundario #fefefe
+    --fondo-articulo-relacionado #fefefe
     --font-primary-color black
     --font-secondary-color #8395a7
     --border-radius 7px
