--- a/assets/globals.styl
+++ b/assets/globals.styl
@@ -18,7 +18,7 @@ body
     color var(--font-primary-color)
 
 main 
-    font-family 'Open Sans'
+    font-family 'Open Sans', sans-serif
 
 
 .page-enter-active, .page-leave-active 
